--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,17 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="activity_login_screen_name">Inicia sesión o regístrate</string>
+    <string name="register_with_email">Regístrate con tu correo</string>
+    <string name="sessión_with_email">Inicia sesíon con tu correo</string>
+    <string name="tutorial_menu">Cómo funciona</string>
+    <string name="tutorial_menu_two">Ayuda</string>
 
     <!-- LoginActivity -->
     <string name="user_mail">Correo electrónico</string>
     <string name="user_password">Contraseña</string>
-    <string name="button_session">Entrar</string>
+    <string name="button_session">Inicia sesión</string>
+    <string name="button_session_login">Iniciar sesión</string>
     <string name="button_register">Regístrate</string>
     <string name="title_activity_sign_up">SignUp</string>
     <string name="not_internet_conection">En este momento no estas conectado</string>
@@ -24,6 +30,7 @@
     <string name="expected_error">Parece que hay un problema con tu conexión. Inténtalo de nuevo.</string>
     <string name="expected_connection">No se pudo obtener Estado y Municipio debido a un problema con tu conexión. Inténtalo de nuevo"</string>
     <string name="location_change">Ahora recibiras ocurrencias de esta localidad.</string>
+    <string name="description_app">Programa Nacional para la Prevención Social de la Violencia y la Delincuencia ,en donde la participación de los ciudadanos es fundamental para fortalecer nuestras comunidades e instituciones y así crear condiciones favorables para avanzar hacia la paz.</string>
 
     <!-- SignUp -->
     <string name="sign_up_title">Registrate </string>
@@ -62,6 +69,9 @@
     <string name="title_evidence">Yo Reviso</string>
     <string name="question">¿Se está realizando el evento descrito?</string>
 
+    <!-- Calification Event -->
+    <string name="scale_txt">En una escala del 1 al 5</string>
+
     <!-- Messages -->
 
     <string name="not_avaliable">Memoria no esta disponible , verifica que tengas espacio</string>
@@ -72,24 +82,21 @@
     <string name="calification_event">¿Comó calificarías el evento?</string>
     <string name="title_activity_municipal">MunicipalActivity</string>
 
-    <!--Error Dialog-->
+    <!-- Error Dialog -->
     <string name="session_error">Correo electrónico o contraseña incorrectos</string>
     <string name="session_error_confirm">vale</string>
 
-    <!--Settings Preferences-->
+    <!-- Settings Preferences -->
     <string name="category_location_label">Localidad</string>
     <string name="category_account_label">Configuración de la Cuenta</string>
-
     <string name="pref_session">Cerrar sesión</string>
-
-
     <string name="pref_location_label">Municipio</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_default" translatable="false">94043</string>
-
     <string name="pref_units_label">Estado</string>
     <string name="pref_units_key">units</string>
     <string name="pref_units_metric">metric</string>
     <string name="pref_units_imperial">imperial</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
