--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,17 @@
     <string name="settings_tabs">Configuración</string>
     <string name="mexico">México</string>
     <string name="event_title">Evento</string>
+    <string name="evindece_three_instruccions">Anota cualquier observación importante</string>
+    <string name="evindece_three_instruccions_a">Agregar comentario</string>
+    <string name="evindece_three_instruccions_btn">CONTINUAR</string>
+
+    <string name="evidence_one_fragment">Capturar Fotos de Evidencia</string>
+    <string name="evidence_two_fragment">Calificar Evento</string>
+    <string name="evidence_three_fragment">Agregar Observaciones</string>
+
+
+
+
 
     <!-- detail -->
     <string name="recopilate_evidence">Recopilar evidencia</string>
@@ -127,5 +138,13 @@ i
     <string name="pref_close_session_key">session</string>
     <string name="pref_tutorial_key">tutorial</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--calification event-->
+    <string name="malo_ponderation">Malo</string>
+    <string name="bueno_ponderation">Bueno</string>
+    <string name="regular_ponderation">Regular</string>
+    <string name="my_bueno_ponderation">Muy Bueno</string>
+    <string name="excelente_ponderation">Excelente</string>
+
 
 </resources>
